<resources>
  <string name="maubis_apps" translatable="false">Maubis Apps</string>
  <string name="timestamp" translatable="false">dd month yyyy, hh:mm aa</string>
  <string name="title">Title</string>
  <string name="description">Content</string>
  <string name="save">Save</string>
  <string name="import_to_app">Import</string>
  <string name="search_notes">Search Notes&#8230;</string>
  <string name="search_toolbar_text">Search %s&#8230; </string>
  <string name="share_using">Share using&#8230;</string>
  <string name="main_no_notes">No Notes</string>
  <string name="main_no_notes_hint">It seems you have not added any notes. Click to add a note.</string>
  <string name="main_add_a_note">Add a note&#8230;</string>
  <string name="main_add_a_quick_note">Add a quick note&#8230;</string>
  <string name="shortcut_add_note">Add Note</string>
  <string name="shortcut_add_list">Add Checklist</string>
  <string name="open_note_night_mode">Night Mode</string>
  <string name="open_note_day_mode">Day Mode</string>
  <string name="edit_note">Edit Note</string>
  <string name="open_in_notification">Create Notification</string>
  <string name="open_in_popup">Open In Popup</string>
  <string name="delete_note">Delete Note</string>
  <string name="delete_note_permanently">Delete Permanently</string>
  <string name="copy_note">Copy Note</string>
  <string name="send_note">Send Note</string>
  <string name="unarchive_note">Unarchive Note</string>
  <string name="archive_note">Archive Note</string>
  <string name="not_favourite_note">Mark Not Favourite</string>
  <string name="favourite_note">Mark Favourite</string>
  <string name="restore_note">Restore Note</string>
  <string name="trash_note">Move to Trash</string>
  <string name="choose_note_color">Change Color</string>
  <string name="lock_note">Lock Note</string>
  <string name="change_tags">Change Tags</string>
  <string name="unlock_note">Unlock Note</string>
  <string name="reminder">Reminder</string>
  <string name="select">Select</string>
  <string name="duplicate">Duplicate</string>
  <string name="pin_note">Pin Note</string>
  <string name="unpin_note">Unpin Note</string>
  <string name="view_distraction_free">Distraction Free</string>
  <string name="choose_action">Choose Action&#8230;</string>
  <string name="tap_for_action_open_note_night_mode">Tap to view the note in night mode</string>
  <string name="tap_for_action_open_note_day_mode">Tap to view the note in day mode</string>
  <string name="tap_for_action_edit">Tap to open note for editing</string>
  <string name="tap_for_action_copy">Tap to copy note content to clipboard</string>
  <string name="tap_for_action_share">Tap to share note content to other apps</string>
  <string name="tap_for_action_popup">Tap to open note in floating popup</string>
  <string name="tap_for_action_delete">Tap to delete the note</string>
  <string name="tap_for_action_trash">Tap to move note to trash</string>
  <string name="tap_for_action_not_trash">Tap to move note out of trash</string>
  <string name="tap_for_action_favourite">Tap to mark note as favourite</string>
  <string name="tap_for_action_not_favourite">Tap to mark note not as favourite</string>
  <string name="tap_for_action_archive">Tap to archive the note</string>
  <string name="tap_for_action_color">Tap to change the background colour of the note</string>
  <string name="tap_for_action_not_archive">Tap to unarchive the note</string>
  <string name="nav_sheet_title">Your Notes and More&#8230;</string>
  <string name="nav_home">Home</string>
  <string name="nav_home_details">All of your normal and favourite notes</string>
  <string name="nav_favourites">Favourites</string>
  <string name="nav_favourites_details">All of your favourite notes</string>
  <string name="nav_archived">Archived</string>
  <string name="nav_archived_details">All of your archived notes</string>
  <string name="nav_locked">Locked</string>
  <string name="nav_locked_details">All of your locked notes</string>
  <string name="nav_tags">Tags</string>
  <string name="nav_tags_details">All your note tags</string>
  <string name="nav_trash">Trash</string>
  <string name="nav_trash_details">All of your notes in the trash</string>
  <string name="format_hint_text">Add Content&#8230;</string>
  <string name="format_hint_heading">Add Heading&#8230;</string>
  <string name="format_hint_sub_heading">Add Sub Heading&#8230;</string>
  <string name="format_hint_quote">Add Quoted Text&#8230;</string>
  <string name="format_hint_list">Add Item&#8230;</string>
  <string name="format_hint_code">Add Code&#8230;</string>
  <string name="format_hint_image">Click to add or change image</string>
  <string name="format_sheet_option_title">Block Formatting</string>
  <string name="format_label_heading">Heading</string>
  <string name="format_label_sub_heading">Sub Heading</string>
  <string name="format_label_text">Text</string>
  <string name="format_label_quote">Quote</string>
  <string name="format_label_code">Code</string>
  <string name="format_label_list">Checklist</string>
  <string name="format_label_image">Image</string>
  <string name="format_label_separator">Separator</string>
  <string name="markdown_sheet_option_title">Markdown Formatting</string>
  <string name="markdown_label_bold">Bold</string>
  <string name="markdown_label_italics">Italics</string>
  <string name="markdown_label_underline">Underline</string>
  <string name="markdown_label_strikethrough">Strike</string>
  <string name="markdown_label_list">List</string>
  <string name="home_option_sheet_title">Options and Settings</string>
  <string name="home_option_ui_experience">Interface and Experience</string>
  <string name="home_option_ui_experience_subtitle">Choose how the app looks and feels.</string>
  <string name="home_option_note_settings">Note Preferences</string>
  <string name="home_option_note_settings_subtitle">Choose note and other settings.</string>
  <string name="home_option_about">About</string>
  <string name="home_option_about_subtitle">Know more about us and the app.</string>
  <string name="home_option_security">Security</string>
  <string name="home_option_security_subtitle">Locking notes and security options</string>
  <string name="home_option_enable_night_mode">Enable Night Mode</string>
  <string name="home_option_enable_night_mode_subtitle">Enable dark theme as default</string>
  <string name="home_option_enable_day_mode">Enable Day Mode</string>
  <string name="home_option_enable_day_mode_subtitle">Enable light theme as default</string>
  <string name="home_option_markdown_settings">Markdown Settings</string>
  <string name="home_option_markdown_settings_subtitle">See how to use markdown in notes</string>
  <string name="home_option_enable_list_view">Enable List Layout</string>
  <string name="home_option_enable_list_view_subtitle">Show notes in a single column</string>
  <string name="home_option_enable_grid_view">Enable Grid Layout</string>
  <string name="home_option_enable_grid_view_subtitle">Show notes in a staggered grid</string>
  <string name="home_option_order_notes">Order Notes</string>
  <string name="home_option_backup_options">Backup and Import</string>
  <string name="home_option_backup_options_subtitle">Backup, import and export note options</string>
  <string name="home_option_export">Export Notes</string>
  <string name="home_option_export_subtitle">Export notes to device storage to share</string>
  <string name="home_option_import">Import Notes</string>
  <string name="home_option_import_subtitle">Import notes from the device storage</string>
  <string name="home_option_auto_export">Export Automatically</string>
  <string name="home_option_auto_export_subtitle">Export notes frequently to external file as backup</string>
  <string name="home_option_about_page">About Us</string>
  <string name="home_option_about_page_subtitle">Know more about the app and the developers</string>
  <string name="home_option_open_source_page">Open Source Project</string>
  <string name="home_option_open_source_page_subtitle">Know more about the open source project</string>
  <string name="home_option_rate_and_review">Rate and Review</string>
  <string name="home_option_rate_and_review_subtitle">Tell us how much you liked the app</string>
  <string name="home_option_fill_survey">Fill Survey</string>
  <string name="home_option_fill_survey_subtitle">Help us improve the app by telling us what you like</string>
  <string name="security_option_title">Security Options</string>
  <string name="security_option_set_pin_code">Pass Code</string>
  <string name="security_option_set_pin_code_subtitle">Set a 4 digit PIN to lock notes</string>
  <string name="security_option_fingerprint_enabled">Unlock with Fingerprint</string>
  <string name="security_option_fingerprint_enabled_subtitle">The notes will unlock with the fingerprint</string>
  <string name="security_option_fingerprint_disabled">Fingerprint disabled</string>
  <string name="security_option_fingerprint_disabled_subtitle">The notes will not use a fingerprint</string>
  <string name="security_sheet_enter_new_pin_title">Enter new PIN</string>
  <string name="security_sheet_enter_pin_to_unlock_title">Enter PIN to unlock</string>
  <string name="security_sheet_enter_current_pin_title">Enter current PIN</string>
  <string name="security_sheet_enter_pin_hint">enter code</string>
  <string name="security_sheet_button_verify">Verify</string>
  <string name="security_sheet_button_unlock">Unlock</string>
  <string name="security_sheet_button_remove">Remove</string>
  <string name="markdown_sheet_markdown_support">Markdown Support</string>
  <string name="markdown_sheet_markdown_support_subtitle">Allow markdown supported formatting</string>
  <string name="markdown_sheet_home_markdown_support">Markdown in Note List</string>
  <string name="markdown_sheet_home_markdown_support_subtitle">Enable Markdown formatting in the list of notes</string>
  <string name="markdown_sheet_examples">Examples</string>
  <string name="markdown_sheet_examples_list" translatable="false">
- **bold**\n- *italics*\n- ~~strike~~\n- `code`\n\n > quote\n</string>
  <string name="permission_layout_give_permission">Give Permissions</string>
  <string name="permission_layout_give_permission_details">Import and export require storage permissions. Please give the permission when requested.</string>
  <string name="permission_layout_give_permission_ok">Allow</string>
  <string name="import_export_layout_exporting_done">Done</string>
  <string name="about_page_title">About Us and More</string>
  <string name="about_page_rate">Rate on Play Store</string>
  <string name="about_page_app_version">App Version</string>
  <string name="about_page_about_app">About App</string>
  <string name="reminder_sheet_title">Note Reminder</string>
  <string name="reminder_sheet_reminder_date">Reminder Date</string>
  <string name="reminder_sheet_reminder_time">Reminder Time</string>
  <string name="reminder_sheet_repeat">Repeat Frequency</string>
  <string name="about_page_description">
    %s is a simple note taking app. It allows quick Rich Text input without making the experience very difficult to use. It makes multi-tasking a breeze.
  </string>
  <string name="about_page_about_us_details">Hi, we are a pair of designer and programmer, who created %s .
    We endeavour to build beautiful, carefully designed free, ad-free or minimal ads apps which serve great utility to everyone!</string>
  <string name="tag_sheet_create_title">Add New Tag&#8230;</string>
  <string name="tag_sheet_enter_tag_hint">enter tag</string>
  <string name="no_pincode_sheet_title">No PIN set</string>
  <string name="no_pincode_sheet_details">You have not set up the PIN. Would you like to set it up now?</string>
  <string name="no_pincode_sheet_not_now">Later</string>
  <string name="no_pincode_sheet_dont_ask">Never Ask</string>
  <string name="no_pincode_sheet_set_up">Set Up</string>
</resources>