<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ui="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
      android:id="@+id/options_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/home_option_markdown_settings"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="18sp" />

    <com.github.bijoysingh.uibasics.views.UIActionView
      android:id="@+id/action_button"
      style="@style/BorderedBackgroundView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:padding="16dp"
      ui:actionSize="24dp"
      ui:actionTint="@color/material_blue_400"
      ui:icon="@drawable/ic_action_markdown"
      ui:iconSize="24dp"
      ui:iconTextGap="16dp"
      ui:iconTint="@color/dark_tertiary_text"
      ui:subtitle="@string/markdown_sheet_markdown_support_subtitle"
      ui:subtitleColor="@color/dark_tertiary_text"
      ui:subtitleSize="14sp"
      ui:subtitleStyle="@style/SanSerif"
      ui:title="@string/markdown_sheet_markdown_support"
      ui:titleColor="@color/dark_secondary_text"
      ui:titleSize="16sp"
      ui:titleStyle="@style/SanSerif" />


    <com.github.bijoysingh.uibasics.views.UIActionView
      android:id="@+id/markdown_home_button"
      style="@style/BorderedBackgroundView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:padding="16dp"
      ui:actionSize="24dp"
      ui:actionTint="@color/material_blue_400"
      ui:icon="@drawable/ic_action_grid"
      ui:iconSize="24dp"
      ui:iconTextGap="16dp"
      ui:iconTint="@color/dark_tertiary_text"
      ui:subtitle="@string/markdown_sheet_home_markdown_support_subtitle"
      ui:subtitleColor="@color/dark_tertiary_text"
      ui:subtitleSize="14sp"
      ui:subtitleStyle="@style/SanSerif"
      ui:title="@string/markdown_sheet_home_markdown_support"
      ui:titleColor="@color/dark_secondary_text"
      ui:titleSize="16sp"
      ui:titleStyle="@style/SanSerif" />

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_margin="8dp"
      android:background="@color/dark_hint_text" />

    <TextView
      android:id="@+id/examples_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/markdown_sheet_examples"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="16sp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/source_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/markdown_sheet_examples_list"
        android:textSize="16sp" />

      <TextView
        android:id="@+id/markdown_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/markdown_sheet_examples_list"
        android:textSize="16sp" />
    </LinearLayout>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>