<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
      android:id="@+id/no_pincode_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/no_pincode_sheet_title"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/no_pincode_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/no_pincode_sheet_details"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="16sp" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:padding="8dp"
      android:gravity="center"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/no_pincode_dont_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/no_pincode_sheet_dont_ask"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

      <TextView
        android:id="@+id/no_pincode_not_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/no_pincode_sheet_not_now"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

      <TextView
        android:id="@+id/no_pincode_set_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/no_pincode_sheet_set_up"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />
    </LinearLayout>

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>