<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:id="@+id/container_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
      android:id="@+id/options_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/about_page_title"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="@dimen/font_size_large" />

    <TextView
      android:id="@+id/about_us_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/home_option_about_page"
      android:textColor="@color/material_blue_grey_500"
      android:textSize="@dimen/font_size_small" />

    <TextView
      android:id="@+id/about_us"
      style="@style/SanSerif"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/about_page_about_us_details"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="@dimen/font_size_small" />

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_margin="@dimen/spacing_normal"
      android:background="@color/material_blue_grey_100" />

    <TextView
      android:id="@+id/about_app_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/about_page_about_app"
      android:textColor="@color/material_blue_grey_500"
      android:textSize="@dimen/font_size_small" />

    <TextView
      android:id="@+id/about_app"
      style="@style/SanSerif"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/about_page_description"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="@dimen/font_size_small" />

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_margin="@dimen/spacing_normal"
      android:background="@color/material_blue_grey_100" />

    <TextView
      android:id="@+id/app_version_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/about_page_app_version"
      android:textColor="@color/material_blue_grey_500"
      android:textSize="@dimen/font_size_small" />

    <TextView
      android:id="@+id/app_version"
      style="@style/SanSerif"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="@dimen/font_size_small" />

    <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:layout_margin="@dimen/spacing_normal"
      android:background="@color/material_blue_grey_100" />

    <LinearLayout
      android:id="@+id/results_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="end"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/rate_us"
        style="@style/BorderedBackgroundView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/spacing_xsmall"
        android:text="@string/about_page_rate"
        android:textAllCaps="true"
        android:textColor="@color/material_blue_600"
        android:textSize="@dimen/font_size_small" />
    </LinearLayout>
  </LinearLayout>
</android.support.v4.widget.NestedScrollView>