<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
      android:id="@+id/options_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/spacing_xsmall"
      android:text="@string/tag_sheet_create_title"
      android:textColor="@color/dark_tertiary_text"
      android:textSize="@dimen/font_size_large" />

    <EditText
      android:id="@+id/enter_tag"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@color/transparent"
      android:fontFamily="monospace"
      android:hint="@string/tag_sheet_enter_tag_hint"
      android:inputType="text"
      android:padding="@dimen/spacing_normal"
      android:textSize="24sp" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_xsmall"
      android:gravity="center"
      android:orientation="horizontal">

      <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

      <TextView
        android:id="@+id/action_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        android:text="@string/security_sheet_button_remove"
        android:textAllCaps="true"
        android:textColor="@color/material_grey_600"
        android:textSize="@dimen/font_size_small"
        android:visibility="gone" />

      <TextView
        android:id="@+id/action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_small" />
    </LinearLayout>

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>